--- a/angular.json
+++ b/angular.json
@@ -28,6 +28,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
               "src/styles.scss"
             ],
             "scripts": []
@@ -92,6 +93,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
               "src/styles.scss"
             ],
             "scripts": []
@@ -127,6 +129,6 @@
   },
   "defaultProject": "book-app",
   "cli": {
-    "analytics": "da19cef5-76dc-426b-9f6c-01bb448a252c"
+    "analytics": "34c4cc32-d82f-4151-a042-246e6347d3c9"
   }
 }
