--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@angular/common": "~10.0.5",
     "@angular/compiler": "~10.0.5",
     "@angular/core": "^10.1.1",
+    "@angular/fire": "^6.1.4",
     "@angular/forms": "~10.0.5",
     "@angular/material": "^10.2.0",
     "@angular/material-moment-adapter": "^10.2.0",
     "@angular/platform-browser": "~10.0.5",
     "@angular/platform-browser-dynamic": "~10.0.5",
     "@angular/router": "~10.0.5",
+    "firebase": "^8.3.0",
     "moment": "^2.28.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
