--- a/package.json
+++ b/package.json
@@ -11,35 +11,35 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.0.5",
-    "@angular/cdk": "^10.2.0",
-    "@angular/common": "~10.0.5",
-    "@angular/compiler": "~10.0.5",
-    "@angular/core": "^10.1.1",
+    "@angular/animations": "~12.0.0-next.4",
+    "@angular/cdk": "^11.2.4",
+    "@angular/common": "~12.0.0-next.4",
+    "@angular/compiler": "~12.0.0-next.4",
+    "@angular/core": "^11.2.5",
     "@angular/fire": "^6.1.4",
-    "@angular/forms": "~10.0.5",
-    "@angular/material": "^10.2.0",
-    "@angular/material-moment-adapter": "^10.2.0",
-    "@angular/platform-browser": "~10.0.5",
-    "@angular/platform-browser-dynamic": "~10.0.5",
-    "@angular/router": "~10.0.5",
+    "@angular/forms": "~12.0.0-next.4",
+    "@angular/material": "^11.2.4",
+    "@angular/material-moment-adapter": "^11.2.4",
+    "@angular/platform-browser": "~12.0.0-next.4",
+    "@angular/platform-browser-dynamic": "~12.0.0-next.4",
+    "@angular/router": "~12.0.0-next.4",
     "firebase": "^8.3.0",
     "moment": "^2.28.0",
-    "rxjs": "~6.5.5",
+    "rxjs": "~6.6.6",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1000.4",
-    "@angular/cli": "~10.0.4",
-    "@angular/compiler-cli": "~10.0.5",
+    "@angular-devkit/build-angular": "^0.1102.4",
+    "@angular/cli": "~11.2.4",
+    "@angular/compiler-cli": "~12.0.0-next.4",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
+    "karma": "~6.2.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~3.3.0",
@@ -50,6 +50,6 @@
     "tslint": "~6.1.0",
     "tslint-eslint-rules": "^5.4.0",
     "tslint-microsoft-contrib": "^6.2.0",
-    "typescript": "~3.9.5"
+    "typescript": "~4.1.5"
   }
 }
